<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="@dimen/defaultPadding"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_logo_login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp">
        <!-- 用户名输入框 -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableStart="@drawable/ic_contacts_nickname"
            android:drawablePadding="10dp"
            />

        <!-- 密码输入框 -->
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableStart="@drawable/ic_screenshot_penshape"
            android:drawablePadding="10dp"
            />


        <TextView
            android:id="@+id/Forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:visibility="invisible"
            android:text="@string/forget_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:text="@string/space_login"
            android:textColor="#FFFFFB"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/registerPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/new_user_register" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/third_party_login" />

        <View
            android:id="@+id/wechatLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_wechat_new" />
    </LinearLayout>
</LinearLayout>