<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:alpha="0.95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:background="@drawable/border_background"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/defaultPadding"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"

                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_cat"
                    android:scaleType="centerCrop"
                    />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/title_demo_movie"
                    android:textColor="@color/black"
                    android:textSize="@dimen/bigTextSize" />

                <TextView
                    android:id="@+id/yearMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/date_demo_231211"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/smallTextSize" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tags"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tag_style"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:background="@drawable/tag_background_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="风格"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tag_mood"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:background="@drawable/tag_background_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="心情"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:gravity="center"/>
            </LinearLayout>

            <TextView
                android:id="@+id/content"
                android:layout_width="260dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:text="@string/content_demo_movie"
                android:padding="@dimen/defaultPadding"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_weight="1" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>